[debugger] fixed deprecations
GitOrigin-RevId: 090ae79b5dcce0ab68d36e6e508cfb474b59868d